--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Galada&display=swap" rel="stylesheet">
 
+
+	<script src="https://kit.fontawesome.com/8bb3a859ef.js" crossorigin="anonymous"></script>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-	<title>Portfolio</title>
+	<title>My Portfolio</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark py-3">
 		<div class="container">
 
-			<a class="navbar-brand" href="index.html" id="branding"><i class="fas fa-gem"></i>My Portfolio</a>
+			<a class="navbar-brand" href="index.html" id="branding">My Portfolio</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -49,8 +51,23 @@
 			<hr>
 			<p class="lead" id="tagline">Full Stack Web Developer</p>
 			<hr>
-			<p id="tagline">Hello my friend! Welcome to my page!</p>
+			<br>
+			<p id="objectives">I would like to contribute my skills as a Full-stack web developer, leveraging my ability to develop E-commerce web applications using readily available web frameworks. With my passion for learning, I will be able to take part in empowering your team with my newly found coding expertise.</p>
 			<!-- <img src="./public/me.jpg" id="ako"> -->
+
+			<br>
+			<hr>
+			<br>
+			<i class="fab fa-html5 fa-7x"></i>
+			<i class="fab fa-bootstrap fa-7x"></i>
+			<i class="fab fa-css3-alt fa-7x"></i>
+			<i class="fab fa-laravel fa-7x"></i>
+			<i class="fab fa-php fa-7x"></i>
+			<i class="fab fa-js fa-7x"></i>
+			<i class="fab fa-react fa-7x"></i>
+			<i class="fab fa-sass fa-7x"></i>
+			<i class="fas fa-fish fa-7x"></i>
+			<!-- MySQL -->
 		</div>
 
 
@@ -61,7 +78,7 @@
 				<hr>
 				<img src="./public/me.jpg" id="ako">
 				<!-- <p class="lead">Full Stack Web Developer</p> -->
-				<p id="content">I took up Bachelor of Science in Information Technology from the University of the East in Manila, Philippines in 2012. I also took up an intensive course in Full Stack Development at Zuitt Coding bootcamp</p>
+				<p id="content">I took up Bachelor of Science in Information Technology from the University of the East in Manila, Philippines in 2012. It is supplemented by an intensive course in Full Stack Development at Zuitt Coding bootcamp in QUezon City.</p>
 			</div>
 
 
@@ -77,7 +94,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="card" style="width: 18rem;">
-					<img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="...">
+					<a href="https://chinitoprinz.gitlab.io/mickey_apostol" target="_blank"><img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="..."></a>
 					<div class="card-body">
 						<p class="card-text" id="projecttitle">E-commerce Frontend Websites</p>
 						<p class="card-text" id="capsdescription">Eleganza Extravaganza: </p>
@@ -87,7 +104,7 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="card" style="width: 18rem;">
-					<img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="...">
+					<a href="https://princesse-connoisseur.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="..."></a>
 					<div class="card-body">
 						<p class="card-text" id="projecttitle">Rental Management System</p>
 						<p class="card-text" id="capsdescription">Princesse Connoisseur: </p>
@@ -97,10 +114,10 @@
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="card" style="width: 18rem;">
-					<img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="...">
+					<a href="https://capstonebookingclient.herokuapp.com" target="_blank"><img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="..."></a>
 					<div class="card-body">
 						<p class="card-text" id="projecttitle">Reservation System</p>
-						<p class="card-text" id="capsdescription">Celebra Grandiosa: </p>
+						<p class="card-text" id="capsdescription">Grandiosa Venues: </p>
 						<p class="card-text" id="capsdescription">The tools I used in this project are ReactJS, MongoDB, Express, NodeJS, Javascript, JQuery, HTML5, CSS & Bootstrap</p>
 					</div>
 				</div>
@@ -109,7 +126,24 @@
 	</div>
 
 
+	<div class="container" id="contactme">
+		<h1 class="display-4" id="contactmename">Contact me</h1>
+		<hr>
+		<div class="row">
+			<div class="col-lg-6 col-md-6 col-sm-12" id="contactmessage">
+				For inquiries, please send a message through email:
+				<a href="https://mail.google.com/mail/u/0/#inbox?compose=XBcJlDMSwRRPncwrfLvxqNPDsnsXPKQnMzrtkjmHHKgcwlscHhgXktgbSHwBXsTXzZXjVwzlhwqnCnDQ" target="_blank">pmpapostol0915@gmail.com</a>
+			</div>
+			<div class="col-lg-6 col-md-6 col-sm-12">
 
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.4101322928154!2d121.0414892145102!3d14.632645089782091!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7f5db7f5e3f%3A0xe15d2d6a4453ed00!2sZuitt%20QC!5e0!3m2!1sen!2sph!4v1581756581543!5m2!1sen!2sph" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+			</div>
+
+
+
+				<footer class="bg-dark text-dark py-4 text-center footer-expand-lg fixed-bottom">
+					<p class="mb-0" id="allrights"> All rights reserved 2019 &copy;</p>
+				</footer>
 
 
 
