edit for interview

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -17,7 +18,9 @@
 	<title>My Portfolio</title>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark py-3">
+
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
 		<div class="container">
 
 			<a class="navbar-brand" href="index.html" id="branding">My Portfolio</a>
@@ -28,7 +31,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#welcome">Home<span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#welcome">Welcome<span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#aboutme">About Me</a>
@@ -46,104 +49,144 @@
 
 
 
-		<div class="container" id="welcome">
-			<h1 class="display-4" id="myname">Paul Michael Apostol</h1>
-			<hr>
-			<p class="lead" id="tagline">Full Stack Web Developer</p>
-			<hr>
-			<br>
-			<p id="objectives">I would like to contribute my skills as a Full-stack web developer, leveraging my ability to develop E-commerce web applications using readily available web frameworks. With my passion for learning, I will be able to take part in empowering your team with my newly found coding expertise.</p>
-			<!-- <img src="./public/me.jpg" id="ako"> -->
 
-			<br>
-			<hr>
-			<br>
-			<i class="fab fa-html5 fa-7x"></i>
-			<i class="fab fa-bootstrap fa-7x"></i>
-			<i class="fab fa-css3-alt fa-7x"></i>
-			<i class="fab fa-laravel fa-7x"></i>
-			<i class="fab fa-php fa-7x"></i>
-			<i class="fab fa-js fa-7x"></i>
-			<i class="fab fa-react fa-7x"></i>
-			<i class="fab fa-sass fa-7x"></i>
-			<i class="fas fa-fish fa-7x"></i>
-			<!-- MySQL -->
-		</div>
-
-
-
-
-			<div class="container" id="aboutme">
-				<h1 class="display-4" id="aboutmename">About me</h1>
-				<hr>
-				<img src="./public/me.jpg" id="ako">
-				<!-- <p class="lead">Full Stack Web Developer</p> -->
-				<p id="content">I took up Bachelor of Science in Information Technology from the University of the East in Manila, Philippines in 2012. It is supplemented by an intensive course in Full Stack Development at Zuitt Coding bootcamp in QUezon City.</p>
-			</div>
+	<section class="container" id="landing">
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<h1 id="myworld">Welcome to my Portfolio!
+			<a class="nav-link" href="#welcome"><i class="fas fa-arrow-circle-down fa-3x"></i></a>
+		</h1>
+	</section>
 
 
 
 
 
+	<section class="container" id="welcome">
+		<h1 class="display-4" id="myname">Paul Michael P. Apostol</h1>
+		<hr>
+		<p class="lead" id="tagline">Full Stack Web Developer</p>
+		<hr>
+		<br>
+		<p id="objectives">I would like to contribute my skills as a Full-stack web developer, leveraging my ability to develop E-commerce web applications using readily available web frameworks. With my passion for learning, I will be able to take part in empowering your team with my newly found coding expertise.</p>
+
+		<!-- <img src="./public/me.jpg" id="ako"> -->
+
+		<br>
+		<hr>
+		<br>
+		<i class="fab fa-html5 fa-7x"></i>
+		<i class="fab fa-bootstrap fa-7x"></i>
+		<i class="fab fa-css3-alt fa-7x"></i>
+		<i class="fab fa-laravel fa-7x"></i>
+		<i class="fab fa-php fa-7x"></i>
+		<i class="fab fa-js fa-7x"></i>
+		<i class="fab fa-react fa-7x"></i>
+		<i class="fab fa-sass fa-7x"></i>
+		<i class="fas fa-fish fa-7x"></i>
+		<!-- MySQL -->
+	</section>
 
 
 
-	<div class="container" id="projects">
+
+	<section class="container" id="aboutme">
+		<h1 class="" id="aboutmename">About me</h1>
+		<hr>
+
+		<img src="./public/me.jpg" id="ako">
+		<!-- <p class="lead">Full Stack Web Developer</p> -->
+		<p id="content">I took up Bachelor of Science in Information Technology from the University of the East in Manila, Philippines in 2012. It is supplemented by an intensive course in Full Stack Development at Zuitt Coding bootcamp in QUezon City.</p>
+		
+		<p id="content">
+		I would like to contribute my skills as a Full-stack web developer, leveraging my ability to develop E-commerce web applications using readily available web frameworks. With my passion for learning, I will be able to take part in empowering your team with my newly found coding expertise.</p>
+
+	</section>
+
+
+
+
+
+
+	<section class="container" id="projects">
 		<h1 class="display-4" id="myprojects">My Projects</h1>
 		<hr>
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12">
-				<div class="card" style="width: 18rem;">
-					<a href="https://chinitoprinz.gitlab.io/mickey_apostol" target="_blank"><img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="..."></a>
+				<div class="card" >
+					<a href="https://chinitoprinz.gitlab.io/mickey_apostol" target="_blank"><img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" id="projs" alt="..."></a>
 					<div class="card-body">
-						<p class="card-text" id="projecttitle">E-commerce Frontend Websites</p>
+						<p class="card-text" id="projecttitle">E-commerce Static Websites</p>
 						<p class="card-text" id="capsdescription">Eleganza Extravaganza: </p>
 						<p class="card-text" id="capsdescription">The tools I used in this project are HTML5, CSS & Bootstrap</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
-				<div class="card" style="width: 18rem;">
-					<a href="https://princesse-connoisseur.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="..."></a>
+				<div class="card" >
+					<a href="https://attirerentals.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" id="projs" alt="..."></a>
 					<div class="card-body">
-						<p class="card-text" id="projecttitle">Rental Management System</p>
-						<p class="card-text" id="capsdescription">Princesse Connoisseur: </p>
+						<p class="card-text" id="projecttitle">Online Asset Management System</p>
+						<p class="card-text" id="capsdescription">Fabulosa Vestida: </p>
 						<p class="card-text" id="capsdescription">The tools I used in this project are PHP, Laravel, Javascript, MySQL, JQuery, HTML5, CSS & Bootstrap</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
-				<div class="card" style="width: 18rem;">
-					<a href="https://capstonebookingclient.herokuapp.com" target="_blank"><img src="https://images.pexels.com/photos/2735970/pexels-photo-2735970.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" alt="..."></a>
+				<div class="card" >
+					<a href="https://capstonebookingclient.herokuapp.com" target="_blank"><img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" id="projs" alt="..."></a>
 					<div class="card-body">
-						<p class="card-text" id="projecttitle">Reservation System</p>
+						<p class="card-text" id="projecttitle">Online Booking System</p>
 						<p class="card-text" id="capsdescription">Grandiosa Venues: </p>
 						<p class="card-text" id="capsdescription">The tools I used in this project are ReactJS, MongoDB, Express, NodeJS, Javascript, JQuery, HTML5, CSS & Bootstrap</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
 
-	<div class="container" id="contactme">
+	<section class="container" id="contactme">
 		<h1 class="display-4" id="contactmename">Contact me</h1>
 		<hr>
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-12" id="contactmessage">
 				For inquiries, please send a message through email:
-				<a href="https://mail.google.com/mail/u/0/#inbox?compose=XBcJlDMSwRRPncwrfLvxqNPDsnsXPKQnMzrtkjmHHKgcwlscHhgXktgbSHwBXsTXzZXjVwzlhwqnCnDQ" target="_blank">pmpapostol0915@gmail.com</a>
+				<a href="https://mail.google.com/mail/u/0/#inbox?compose=lqrsmGhkpSsrkkwWrsrlpTgCkZzjQtfsSDwtDxMGVfWQTtGWbZgndmNDskHfpVwVltPrlLsKDrhHXJwSK" target="_blank">pmpapostol0915@gmail.com</a>
+				<br>
+				<br>
+
+				<a href="https://www.facebook.com/chinitoprinz"><i class="fab fa-facebook-square fa-7x"></i></a>
+				<a href="https://www.linkedin.com/in/paul-michael-apostol-ba3b6a12b/"><i class="fab fa-linkedin fa-7x"></i></a>
+				<a href="https://www.youtube.com/channel/UCOBSKg4goZlJZuQHk0vnwDA?view_as=subscriber"><i class="fab fa-youtube-square fa-7x"></i></a>
+				<a href="https://www.youtube.com/channel/UCzLDChRo_IrnF289xpELAKw?view_as=subscriber"><i class="fab fa-youtube-square fa-7x"></i></a>
+
+				<br><br>
 			</div>
+
 			<div class="col-lg-6 col-md-6 col-sm-12">
 
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.4101322928154!2d121.0414892145102!3d14.632645089782091!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7f5db7f5e3f%3A0xe15d2d6a4453ed00!2sZuitt%20QC!5e0!3m2!1sen!2sph!4v1581756581543!5m2!1sen!2sph" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.4101322928154!2d121.0414892145102!3d14.632645089782091!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7f5db7f5e3f%3A0xe15d2d6a4453ed00!2sZuitt%20QC!5e0!3m2!1sen!2sph!4v1581756581543!5m2!1sen!2sph" width="600" height="400" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 			</div>
+		</div>
+	</section>
 
 
 
-				<footer class="bg-dark text-dark py-4 text-center footer-expand-lg fixed-bottom">
-					<p class="mb-0" id="allrights"> All rights reserved 2019 &copy;</p>
-				</footer>
+	<footer class="bg-dark text-light py-4 text-center footer-expand-lg container-fluid">
+		<p class="mb-0" id="allrights"> All rights reserved 2019 &copy;</p>
+	</footer>
 
 
 
@@ -154,5 +197,6 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </body>
 </html>
