edit for interview

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					<div class="card-body">
 						<p class="card-text" id="projecttitle">Online Booking System</p>
 						<p class="card-text" id="capsdescription">Grandiosa Venues: </p>
-						<p class="card-text" id="capsdescription">The tools I used in this project are ReactJS, MongoDB, Express, NodeJS, Javascript, JQuery, HTML5, CSS & Bootstrap</p>
+						<p class="card-text" id="capsdescription">The tools I used in this project are ReactJS, MongoDB, Express, NodeJS, Javascript, JQuery, HTML5, CSS & Bootstrap with Stripe</p>
 					</div>
 				</div>
 			</div>
