--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 
 	<section class="container" id="projects">
-		<h1 class="display-4" id="myprojects">My Projects</h1>
+		<h1 class="" id="myprojects">My Projects</h1>
 		<hr>
 		<div class="row">
 			<div class="col-lg-4 col-md-4 col-sm-12">
@@ -158,7 +158,7 @@
 
 
 	<section class="container" id="contactme">
-		<h1 class="display-4" id="contactmename">Contact me</h1>
+		<h1 class="" id="contactmename">Contact me</h1>
 		<hr>
 		<div class="row">
 			<div class="col-lg-6 col-md-6 col-sm-12" id="contactmessage">
