--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
 				<div class="card" >
 					<a href="https://chinitoprinz.gitlab.io/mickey_apostol" target="_blank"><img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" id="projs" alt="..."></a>
 					<div class="card-body">
-						<p class="card-text" id="projecttitle">E-commerce Static Websites</p>
-						<p class="card-text" id="capsdescription">Eleganza Extravaganza: </p>
+						<p class="card-text" id="projecttitle">E-commerce Static Website</p>
+						<p class="card-text" id="capsdescription">Eleganza Extravaganza Bags: </p>
 						<p class="card-text" id="capsdescription">The tools I used in this project are HTML5, CSS & Bootstrap</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12">
 				<div class="card" >
-					<a href="https://attirerentals.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" id="projs" alt="..."></a>
+					<a href="https://princesse-connoisseur.herokuapp.com/" target="_blank"><img src="https://images.pexels.com/photos/220357/pexels-photo-220357.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" id="projs" alt="..."></a>
 					<div class="card-body">
 						<p class="card-text" id="projecttitle">Online Asset Management System</p>
-						<p class="card-text" id="capsdescription">Fabulosa Vestida: </p>
+						<p class="card-text" id="capsdescription">Princess Connoisseur Attire Rentals: </p>
 						<p class="card-text" id="capsdescription">The tools I used in this project are PHP, Laravel, Javascript, MySQL, JQuery, HTML5, CSS & Bootstrap</p>
 					</div>
 				</div>
